# r3x-cloud

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: detector.rs  mod.rs  rules.rs
src-tauri/src/cloud/: account.rs  mod.rs  provider.rs
src-tauri/src/cloud/gcp/: addresses.rs  appengine.rs  artifact_registry.rs  bigquery.rs  cloudrun.rs  cloudsql.rs  compute.rs  dataproc.rs  disks.rs  firewalls.rs  forwarding_rules.rs  functions.rs  gke.rs  images.rs  logging.rs  memorystore.rs  mod.rs  nat.rs  networks.rs  provider.rs  pubsub.rs  secrets.rs  snapshots.rs  spanner.rs  storage.rs  vpn.rs
src-tauri/src/cost/: mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/scanner/: engine.rs
src-tauri/src/storage/: db.rs
src/components/: AccountManager.tsx  CommandPalette.tsx  CostTrend.tsx  Dashboard.tsx  ExportDialog.tsx  Header.tsx  InfraMap.tsx  KeyboardBar.tsx  RecommendationsPanel.tsx  ResourceDetail.tsx  ResourceExplorer.tsx  ScanDiff.tsx  ScanHistory.tsx  ScanPanel.tsx  SettingsPanel.tsx  Sidebar.tsx
src/lib/: format.ts  ipc.ts  types.ts
src/stores/: analysis.ts  cloud.ts  scan.ts  theme.ts
src/styles/: global.css
