[package]
name = "r3x-cloud"
version = "0.1.0"
description = "Interactive Cloud Resource Explorer"
authors = ["Rebash <admin@rebash.in>"]
edition = "2021"

[lib]
name = "r3x_cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Rate limiting
governor = "0.8"

# GCP (REST-based)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# CSV export
csv = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
